created a processed airbnb file so that we can show read_csv in inference chp

--- a/inference.Rmd
+++ b/inference.Rmd
@@ -126,17 +126,17 @@ includes an ID number, neighbourhood, type of room, the number of people the
 rental accommodates, number of bathrooms, bedrooms, beds, and the price per
 night. 
 
-```{r 11-example-means1, echo = FALSE, message = FALSE, warning = FALSE}
+<!--
 airbnb <- read_csv("data/listings.csv") |>
   select(id, neighbourhood = neighbourhood_cleansed, room_type, accommodates, bathrooms = bathrooms_text, bedrooms, beds, price) |>
   mutate(price = as.numeric(str_remove(price, "[$]"))) |>
   na.omit()
 airbnb <- airbnb |>
   mutate(id = 1:nrow(airbnb))
-```
+-->
 
-
-```{r}
+```{r load-airbnb, message = FALSE, warning = FALSE}
+airbnb <- read_csv("data/listings.csv")
 airbnb
 ```
 Suppose the city of Vancouver wants information about Airbnb rentals to help
@@ -257,7 +257,7 @@ size 40. Remember, in the real world, since we don't have the population, we
 can't actually construct the sampling distribution, but in this example, we do
 have it so we can actually visualize it directly.
 
-```{r 11-example-proportions7, echo = TRUE, message = FALSE, warning = FALSE,fig.cap = "Sampling distribution of the sample proportion for sample size 40", out.width = "60%"}
+```{r 11-example-proportions7, echo = TRUE, message = FALSE, warning = FALSE,fig.cap = "Sampling distribution of the sample proportion for sample size 40", fig.retina = 2, out.width = "70%"}
 sampling_distribution <- ggplot(sample_estimates, aes(x = sample_proportion)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey", bins = 12) +
   xlab("Sample proportions")
@@ -302,7 +302,7 @@ price per night with a histogram.
 ```{r, echo = F}
 options(pillar.sigfig = 5)
 ```
-```{r 11-example-means2, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Population distribution of price per night ($) for all Airbnb listings in Vancouver, Canada", out.width = "60%"}
+```{r 11-example-means2, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Population distribution of price per night ($) for all Airbnb listings in Vancouver, Canada", fig.retina = 2, out.width = "70%"}
 population_distribution <- ggplot(airbnb, aes(x = price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Price per night ($)")
@@ -341,7 +341,7 @@ We can create a histogram to visualize the distribution of observations in the
 sample (Figure \@ref(fig:11-example-means-sample-hist)), and calculate the mean
 of our sample.
 
-```{r 11-example-means-sample-hist, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of price per night ($) for sample of 40 Airbnb listings", out.width = "60%"}
+```{r 11-example-means-sample-hist, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of price per night ($) for sample of 40 Airbnb listings", fig.retina = 2, out.width = "70%"}
 sample_distribution <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Price per night ($)")
@@ -378,7 +378,7 @@ samples
 
 Now we can calculate the sample mean for each replicate and plot the sampling
 distribution of sample means for samples of size 40.
-```{r 11-example-means4, echo = TRUE, message = FALSE, warning = FALSE, fig.cap= "Sampling distribution of the sample means for sample size of 40",out.width = "60%"}
+```{r 11-example-means4, echo = TRUE, message = FALSE, warning = FALSE, fig.cap= "Sampling distribution of the sample means for sample size of 40", fig.retina = 2, out.width = "70%"}
 sample_estimates <- samples |>
   group_by(replicate) |>
   summarise(sample_mean = mean(price))
@@ -421,7 +421,7 @@ Notice that the mean of the sample means is \$`r round(mean(sample_estimates$sam
 was \$`r round(mean(airbnb$price),2)`. 
 -->
 
-```{r 11-example-means5, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparision of population distribution, sample distribution and sampling distribution", out.width = "70%"}
+```{r 11-example-means5, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparison of population distribution, sample distribution and sampling distribution", fig.retina = 2}
 grid.arrange(population_distribution +
   ggtitle("Population") +
   xlim(min(airbnb$price), 600),
@@ -488,7 +488,7 @@ sampling_distribution_500 <- ggplot(sample_estimates_500, aes(x = sample_mean)) 
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 ```
 
-```{r 11-example-means7,  echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparision of sampling distributions"}
+```{r 11-example-means7,  echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparison of sampling distributions", fig.retina = 2}
 annotated_sampling_dist_20 <- sampling_distribution_20 +
   geom_vline(xintercept = mean(sample_estimates$sample_mean), col = "red") +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20)) +
@@ -596,7 +596,7 @@ see that the sample’s distribution looks like that of the population for a
 large enough sample.
 
 
-```{r 11-example-bootstrapping0, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparision of samples of different sizes from the population"}
+```{r 11-example-bootstrapping0, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparison of samples of different sizes from the population", fig.retina = 2}
 
 sample_10 <- airbnb |>
   rep_sample_n(10)
@@ -686,7 +686,7 @@ one_sample <- one_sample |>
   ungroup() |> select(-replicate)
 ```
 
-```{r 11-bootstrapping1, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histogram of price per night ($) for one sample of size 40", out.width = "60%"}
+```{r 11-bootstrapping1, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histogram of price per night ($) for one sample of size 40", fig.retina = 2, out.width = "70%"}
 one_sample
 one_sample_dist <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
@@ -706,7 +706,7 @@ creating our sampling distribution. Since we want to sample with replacement,
 we change the argument for `replace` from its default value of `FALSE` to
 `TRUE`.
 
-```{r 11-bootstrapping3, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Bootstrap distribution", out.width = "60%"}
+```{r 11-bootstrapping3, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Bootstrap distribution", fig.retina = 2, out.width = "70%"}
 boot1 <- one_sample |>
   rep_sample_n(size = 40, replace = TRUE, reps = 1)
 boot1_dist <- ggplot(boot1, aes(price)) +
@@ -741,7 +741,7 @@ tail(boot20000)
 ```
 
 Let's take a look at histograms of the first six replicates of our bootstrap samples.
-```{r 11-bootstrapping-six-bootstrap-samples, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histograms of first six replicates of bootstrap samples"}
+```{r 11-bootstrapping-six-bootstrap-samples, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histograms of first six replicates of bootstrap samples", fig.retina = 2}
 six_bootstrap_samples <- boot20000 |>
   filter(replicate <= 6)
 ggplot(six_bootstrap_samples, aes(price)) +
@@ -766,7 +766,7 @@ generate a bootstrap distribution of our point estimates. The bootstrap
 distribution (Figure \@ref(fig:11-bootstrapping5)) suggests how we might expect
 our point estimate to behave if we took another sample.
 
-```{r 11-bootstrapping5, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means"}
+```{r 11-bootstrapping5, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means", fig.retina = 2, out.width = "70%"}
 boot20000_means <- boot20000 |>
   group_by(replicate) |>
   summarize(mean = mean(price))
@@ -781,7 +781,7 @@ boot_est_dist
 Let's compare our bootstrap distribution with the true sampling distribution
 (taking many samples from the population). 
 
-```{r 11-bootstrapping6, echo = F, message = FALSE, warning = FALSE, fig.cap = "Comparison of distribution of the bootstrap sample means and sampling distribution", out.height="50%"}
+```{r 11-bootstrapping6, echo = F, message = FALSE, warning = FALSE, fig.cap = "Comparison of distribution of the bootstrap sample means and sampling distribution", fig.retina = 2, out.height = "70%"}
 samples <- rep_sample_n(airbnb, size = 40, reps = 20000)
 
 sample_estimates <- samples |>
@@ -1009,7 +1009,7 @@ the middle 95\% of the sample mean prices in the bootstrap distribution. We can
 visualize the interval on our distribution in Figure
 \@ref(fig:11-bootstrapping9). 
 
-```{r 11-bootstrapping9, echo = F, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means with percentile lower and upper bounds", out.width = "70%"}
+```{r 11-bootstrapping9, echo = F, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means with percentile lower and upper bounds", fig.retina = 2, out.width = "70%"}
 boot_est_dist +
   geom_vline(xintercept = bounds, col = "#E69F00", size = 2, linetype = 2) +
   annotate("text",
