loading tidyverse and infer earlier; fixed repeated however in last paragraph

--- a/inference.Rmd
+++ b/inference.Rmd
@@ -136,6 +136,8 @@ airbnb <- airbnb |>
 -->
 
 ```{r load-airbnb, message = FALSE, warning = FALSE}
+library(tidyverse)
+
 airbnb <- read_csv("data/listings.csv")
 airbnb
 ```
@@ -150,9 +152,6 @@ listings in Vancouver, Canada. We can find the proportion of listings where
 `room_type == "Entire home/apt"`.
 
 ```{r 11-example-proportions2, echo = TRUE, message = FALSE, warning = FALSE }
-library(tidyverse)
-library(infer)
-
 airbnb |>
   summarize(
     n =  sum(room_type == "Entire home/apt"),
@@ -184,6 +183,8 @@ package. The arguments of `rep_sample_n` are (1) the data frame (or tibble) to
 sample from, and (2) the size of the sample to take.
 
 ```{r 11-example-proportions3, echo = TRUE, message = FALSE, warning = FALSE}
+library(infer)
+
 set.seed(123)
 sample_1 <- rep_sample_n(tbl = airbnb, size = 40)
 airbnb_sample_1 <- summarize(sample_1,
@@ -1033,7 +1034,7 @@ Notice that our interval does indeed contain the true
 population mean value, \$`r round(mean(airbnb$price),2)`\! However, in
 practice, we would not know whether our interval captured the population
 parameter or not because we usually only have a single sample, not the entire
-population. However, this is the best we can do when we only have one sample!
+population. This is the best we can do when we only have one sample!
 
 This chapter is only the beginning of the journey into statistical inference.
 We can extend the concepts learned here to do much more than report point
