--- a/inference.Rmd
+++ b/inference.Rmd
@@ -1,7 +1,6 @@
 # Introduction to statistical inference {#inference}
 
-
-```{r 11-setup, include= F}
+```{r 11-setup, include = F}
 knitr::opts_chunk$set(warning = FALSE)
 library(gridExtra)
 library(tidyverse)
@@ -22,7 +21,6 @@ min_x <- function(dist) {
   min(ggp_data$data[[1]]$xmin)
 }
 ```
-
 
 ## Overview
 A typical data analysis task in practice is to draw conclusions about some
@@ -49,28 +47,28 @@ By the end of the chapter, readers will be able to:
 * Contrast the bootstrap and sampling distributions.
 
 ## Why do we need sampling? 
-Statistical inference can help us decide how quantities we observe in a subset
-of data relate to the same quantities in the broader population. Suppose a
+We often need to understand how quantities we observe in a subset
+of data relate to the same quantities in the broader population. For example, suppose a
 retailer is considering selling iPhone accessories, and they want to estimate
 how big the market might be. Additionally, they want to strategize how they can
 market their products on North American college and university campuses. This
-retailer might use statistical inference to answer the question: 
+retailer might formulate the following question:
 
 *What proportion of all undergraduate students in North America own an iPhone?*
 
 In the above question, we are interested in making a conclusion about *all*
-undergraduate students in North America; this is our **population**.  In
+undergraduate students in North America; this is referred to as the **population**.  In
 general, the population is the complete collection of individuals or cases we
 are interested in studying.  Further, in the above question, we are interested
 in computing a quantity&mdash;the proportion of iPhone owners&mdash;based on
-the entire population. This proportion is our **population parameter**.  In
+the entire population. This proportion is referred to as a **population parameter**.  In
 general, a population parameter is a numerical characteristic of the entire
 population. To compute this number in the example above, we would need to ask
 every single undergraduate in North America whether they own an iPhone. In
 practice, directly computing population parameters is often time-consuming and
 costly, and sometimes impossible. 
 
-A more practical approach would be to collect measurements for a **sample**: a
+A more practical approach would be to make measurements for a **sample**, i.e., a
 subset of individuals collected from the population. We can then compute a
 **sample estimate**&mdash;a numerical characteristic of the sample&mdash;that
 estimates the population parameter. For example, suppose we randomly selected
@@ -78,7 +76,9 @@ ten undergraduate students across North America (the sample) and computed the
 proportion of those students who own an iPhone (the sample estimate). In that
 case, we might suspect that that proportion is a reasonable estimate of the
 proportion of students who own an iPhone in the entire population.  Figure
-\@ref(11-population-vs-sample) illustrates this process.
+\@ref(fig:11-population-vs-sample) illustrates this process.
+In general, the process of using a sample to make a conclusion about the
+broader population from which it is taken is referred to as **statistical inference**.
 
 ```{r 11-population-vs-sample, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Population versus sample", fig.retina = 2}
 knitr::include_graphics("img/population_vs_sample.svg")
@@ -87,22 +87,22 @@ knitr::include_graphics("img/population_vs_sample.svg")
 </center>
 
 Note that proportions are not the *only* kind of population parameter we might
-be interested in. Suppose an undergraduate student studying at the University
-of British Columbia in Vancouver, British Columbia, is looking for an apartment
+be interested in. For example, suppose an undergraduate student studying at the University
+of British Columbia in Canada is looking for an apartment
 to rent. They need to create a budget, so they want to know something about
-studio apartment rental prices in Vancouver, BC. This student might use
-statistical inference to tackle the question:
+studio apartment rental prices in Vancouver, BC. This student might 
+formulate the following question:
 
 *What is the average price-per-month of studio apartment rentals in Vancouver, Canada?*
 
-The population consists of all studio apartment rentals in Vancouver, and the
+In this case, the population consists of all studio apartment rentals in Vancouver, and the
 population parameter is the *average price-per-month*. Here we used the average
 as a measure of center to describe the "typical value" of studio apartment
 rental prices. But even within this one example, we could also be interested in
 many other population parameters. For instance, we know that not every studio
 apartment rental in Vancouver will have the same price-per-month. The student
 might be interested in how much monthly prices vary and want to find a measure
-of the rentals' spread (or variability), such as the standard deviation. The
+of the rentals' spread (or variability), such as the standard deviation. Or perhaps the
 student might be interested in the fraction of studio apartment rentals that
 cost more than \$1000 per month. The question we want to answer will help us
 determine the parameter we want to estimate. If we were somehow able to observe
@@ -120,8 +120,8 @@ focus on two settings:
 ### Sampling distributions for proportions
 We will look at an example using data from 
 [Inside Airbnb](http://insideAirbnb.com/) [@insideairbnb]. Airbnb is an online
-marketplace for arranging vacation rentals and places to stay. The data set,
-`airbnb`, contains listings for Vancouver, Canada, in September 2020. Our data
+marketplace for arranging vacation rentals and places to stay. The data set
+contains listings for Vancouver, Canada, in September 2020. Our data
 includes an ID number, neighbourhood, type of room, the number of people the
 rental accommodates, number of bathrooms, bedrooms, beds, and the price per
 night. 
@@ -168,18 +168,17 @@ population_proportion <- airbnb |>
   pull()
 ```
 
-From our data, we can see that the proportion of `Entire home/apt` listings in
+We can see that the proportion of `Entire home/apt` listings in
 the data set is `r round(population_proportion,3)`. This 
 value, `r round(population_proportion,3)`, is the population parameter. Remember, this
-parameter value is usually unknown in real data analysis problems. Therefore
-normally, we can't compute it.  Instead, perhaps we can approximate it with a
-small set of data.
+parameter value is usually unknown in real data analysis problems, as it is
+typically not possible to make measurements for an entire population.  
 
-Let's see what would happen if we were to randomly select 40 listings and count
-the number of entire home/apartment listings (*i.e.,* take a random sample of
-size 40 from our population). Let's use R to simulate this using our `airbnb`
-population. We can do this using the `rep_sample_n` function from the `infer`
-package. The arguments of `rep_sample_n` are (1) the data frame (or tibble) to
+Instead, perhaps we can approximate it with a small subset of data!
+To investigate this idea, let's try randomly selecting 40 listings (*i.e.,* taking a random sample of
+size 40 from our population), and computing the proportion for that sample.
+We will use the `rep_sample_n` function from the `infer`
+package to take the sample. The arguments of `rep_sample_n` are (1) the data frame to
 sample from, and (2) the size of the sample to take.
 
 ```{r 11-example-proportions3, echo = TRUE, message = FALSE, warning = FALSE}
@@ -195,13 +194,13 @@ airbnb_sample_1
 ```
 
 Here we see that the proportion of entire home/apartment listings in this
-random sample is `r round(airbnb_sample_1$prop,2)`. Wow, that's close to our
-true population value! But remember, we just used a random sample of 40 so this
-value is an *estimate* &mdash; our best guess of our population parameter using
-this sample. Given that it is a single value that we are estimating, we often
-refer to it as a **point estimate**.  The keyword there is *random* -- if we
-were to take another random sample of 40 listings from the population, we
-wouldn't get the same answer:
+random sample is `r round(airbnb_sample_1$prop,2)`. Wow&mdash;that's close to our
+true population value! But remember, we computed the proportion using a random sample of size 40.
+This has two consequences. First, this value is only an *estimate*, i.e., our best guess 
+of our population parameter using this sample. Given that it is a single value that we are estimating, we often
+refer to it as a **point estimate**.  And second, since the sample was random,
+if we were to take *another* random sample of size 40 and compute the proportion for that sample,
+we would not get the same answer:
 
 ```{r 11-example-proportions4, echo = TRUE, message = FALSE, warning = FALSE}
 set.seed(1234)
@@ -213,93 +212,100 @@ airbnb_sample_2 <- summarize(sample_2,
 airbnb_sample_2
 ```
 
-Confirmed! We get a different value for our estimate this time so that means
-that our point estimate might be unreliable!  Estimates vary from sample to
-sample due to **sampling variability**.  So if we were to do this again,
-another random sample could also give a different result.
+Confirmed! We get a different value for our estimate this time.
+That means that our point estimate might be unreliable. Indeed, estimates vary from sample to
+sample due to **sampling variability**. But just how much 
+should we expect the estimates of our random samples to vary?
+Or in other words, how much can we really trust our point estimate based on a single sample?
 
-But just how much should we expect the estimates of our random samples to vary?
-To understand this, we will simulate taking many samples (rather than just two)
+To understand this, we will simulate many samples (much more than just two)
 of size 40 from our population of listings and calculate the proportion of
-entire home/apartment listings in each sample. From this simulation, will get
-many sample proportions, which we can visualize on a histogram. The
+entire home/apartment listings in each sample. This simulation will create
+many sample proportions, which we can visualize using a histogram. The
 distribution of the estimate for all possible samples of a given size (which we
 commonly refer to as $n$) from a population is called 
 a **sampling distribution**. The sampling distribution will help us see how much we would
 expect our sample proportions from this population to vary for samples of size 40. 
 
-Below we again use the `rep_sample_n` to take samples of size 40 from our
-population of Airbnb listings, but we set the `reps` argument to specify the
-number of samples to take, here 20,000. We will use the function `tail()` to
-see the last few rows of our `samples` data frame.
-
+We again use the `rep_sample_n` to take samples of size 40 from our
+population of Airbnb listings. But this time we set the `reps` argument to 20,000 to specify 
+that we want to take 20,000 samples of size 40.
 ```{r 11-example-proportions5, echo = TRUE, message = FALSE, warning = FALSE}
 samples <- rep_sample_n(airbnb, size = 40, reps = 20000)
 samples
+```
+
+Notice that the column `replicate` indicates the replicate, or sample, to which
+each listing belongs. Above since by default R only prints the first few rows,
+it looks like all of the listing have `replicate` set to 1. But you can 
+check the last few entries using the `tail()` function to verify that 
+we indeed created 20,000 samples (or replicates).
+
+```{r 11-example-proportions5b, echo = TRUE, message = FALSE, warning = FALSE}
 tail(samples)
 ```
 
-Notice the column `replicate` indicates the replicate, or sample, with which
-each listing belongs. Since we took 20,000 samples of size 40, there are 20,000
-replicates.  Now that we have taken 20,000 samples, to create a sampling
-distribution of sample proportions for samples of size 40, we need to calculate
-the proportion of entire home/apartment listings for each sample:
+Now that we have obtained the samples, we need to compute the 
+proportion of entire home/apartment listings in each sample.
+We first group the data by the `replicate` variable&mdash;to group the
+set of listings in each sample together&mdash;and then use `summarize` 
+to compute the proportion in each sample.
+We print both the first and last few entries of the resulting data frame
+below to show that we end up with 20,000 point estimates, one for each of the 20,000 samples.
 ```{r 11-example-proportions6, echo = TRUE, message = FALSE, warning = FALSE}
 sample_estimates <- samples |>
   group_by(replicate) |>
-  summarise(sample_proportion = sum(room_type == "Entire home/apt") / 40)
+  summarize(sample_proportion = sum(room_type == "Entire home/apt") / 40)
 sample_estimates
 tail(sample_estimates)
 ```
-
-We calculated the proportion of entire home/apartment listings for each sample
-to visualize the sampling distribution of sample proportions for samples of
-size 40. Remember, in the real world, since we don't have the population, we
-can't actually construct the sampling distribution, but in this example, we do
-have it so we can actually visualize it directly.
-
+We can now visualize the sampling distribution of sample proportions
+for samples of size 40 using a histogram in Figure \@ref(fig:11-example-proportions7). Keep in mind: in the real world, 
+we don't have access to the full population. So we
+can't take many samples and can't actually construct or visualize the sampling distribution. 
+We have created this particular example
+such that we *do* have access to the full population, which lets us visualize the 
+sampling distribution directly for learning purposes.
 ```{r 11-example-proportions7, echo = TRUE, message = FALSE, warning = FALSE,fig.cap = "Sampling distribution of the sample proportion for sample size 40", fig.retina = 2, out.width = "70%"}
 sampling_distribution <- ggplot(sample_estimates, aes(x = sample_proportion)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey", bins = 12) +
   xlab("Sample proportions")
 sampling_distribution
 ```
-
 The sampling distribution in Figure \@ref(fig:11-example-proportions7) appears
-to be bell-shaped with one peak. It is centered around `r
-round(mean(sample_estimates$sample_proportion),1)` and the sample proportions
+to be bell-shaped, is roughly symmetric, and has one peak. It is centered 
+around `r round(mean(sample_estimates$sample_proportion),1)` and the sample proportions
 range from about `r round(min(sample_estimates$sample_proportion), 1)` to about
 `r round(max(sample_estimates$sample_proportion), 1)`. In fact, we can
 calculate the mean of the sample proportions. 
 
 ```{r 11-example-proportions8, echo = TRUE, message = FALSE, warning = FALSE}
 sample_estimates |>
-  summarise(mean = mean(sample_proportion))
+  summarize(mean = mean(sample_proportion))
 ```
 
 We notice that the sample proportions are centred around the population
 proportion value, `r round(population_proportion,3)`! In general, the mean of
-the distribution of $\hat{p}$ should be equal to $p$, which is good because
-that means the sample proportion is neither an overestimate nor an
-underestimate of the population proportion. Any *individual* sample may give
-you a sample proportion that is larger or smaller than the population
-proportion, but when we repeat the sampling process many times (as we did in
-this example), there is no tendency towards over or underestimating. 
+the sampling distribution should be equal to the population porpotion.
+This is great news, because it means that the sample proportion is neither an overestimate nor an
+underestimate of the population proportion. 
+In other words, if you were to take many samples like we did above, there is no tendency 
+towards over or underestimating the population proportion. 
+In a real data analysis setting where you just have access to your single
+sample, this implies that you would suspect that your sample point estimate is
+roughly equally likely to be above or below the true population proportion.
 
 ### Sampling distributions for means 
 
-In the previous section, our variable of interest&mdash; `room_type` &mdash;was
+In the previous section, our variable of interest&mdash;`room_type`&mdash;was
 *categorical*, and the population parameter was a proportion. As mentioned in
 the chapter introduction, there are many choices of the population parameter
 for each type of variable. What if we wanted to infer something about a
 population of *quantitative* variables instead? For instance, a traveller
-visiting Vancouver, BC, may wish to know about the prices of staying somewhere
-using Airbnb. Particularly, they might be interested in estimating the
-population mean price per night of Airbnb listings in Vancouver, BC. Knowing
+visiting Vancouver, British Columbia may wish to estimate the
+population *mean* (or average) price per night of Airbnb listings. Knowing
 the average could help them tell whether a particular listing is overpriced.
-Let's look at the case where we are interested in the population mean of a
-quantitative variable.  We can visualize the population distribution of the
-price per night with a histogram. 
+We can visualize the population distribution of the price per night with a histogram. 
 ```{r, echo = F}
 options(pillar.sigfig = 5)
 ```
@@ -310,10 +316,9 @@ population_distribution <- ggplot(airbnb, aes(x = price)) +
 population_distribution
 ```
 In Figure \@ref(fig:11-example-means2), we see that the population distribution
-has one peak and is skewed (i.e. not symmetric) since most of the listings are
-less than \$250 per night, but a small proportion of listings cost more than
-that, creating a long tail on the histogram's right side. 
-
+has one peak. It is also skewed (i.e., is not symmetric): most of the listings are
+less than \$250 per night, but a small number of listings cost much more, 
+creating a long tail on the histogram's right side. 
 Along with visualizing the population, we can calculate the population mean,
 the average price per night for all the Airbnb listings. 
 ```{r 11-example-means-popmean, echo = TRUE, message = FALSE, warning = FALSE}
@@ -382,7 +387,7 @@ distribution of sample means for samples of size 40.
 ```{r 11-example-means4, echo = TRUE, message = FALSE, warning = FALSE, fig.cap= "Sampling distribution of the sample means for sample size of 40", fig.retina = 2, out.width = "70%"}
 sample_estimates <- samples |>
   group_by(replicate) |>
-  summarise(sample_mean = mean(price))
+  summarize(sample_mean = mean(price))
 sample_estimates
 
 sampling_distribution_40 <- ggplot(sample_estimates, aes(x = sample_mean)) +
@@ -416,7 +421,7 @@ sample, which will keep the average from being too extreme.
 <!---
 ```{r 11-example-means4.5}
 sample_estimates |>
-  summarise(mean_of_sample_means = mean(sample_mean))
+  summarize(mean_of_sample_means = mean(sample_mean))
 ```
 Notice that the mean of the sample means is \$`r round(mean(sample_estimates$sample_mean),2)`. Recall that the population mean
 was \$`r round(mean(airbnb$price),2)`. 
@@ -441,25 +446,26 @@ the sample mean&mdash;i.e., the point estimate that we obtain is not very
 reliable&mdash;is there any way to improve the estimate?  One way to improve a
 point estimate is to take a *larger* sample. To illustrate what effect this
 has, we will take many samples of size 20, 50, 100, and 500, and plot the
-sampling distribution of the sample mean.
+sampling distribution of the sample mean. We indicate the mean of the sampling
+distribution with a red vertical line.
 
 ```{r 11-example-means6, echo = FALSE, message = FALSE, warning = FALSE}
 ## Sampling n = 20, 50, 100, 500
 sample_estimates_20 <- rep_sample_n(airbnb, size = 20, reps = 20000) |>
   group_by(replicate) |>
-  summarise(sample_mean = mean(price))
+  summarize(sample_mean = mean(price))
 
 sample_estimates_50 <- rep_sample_n(airbnb, size = 50, reps = 20000) |>
   group_by(replicate) |>
-  summarise(sample_mean = mean(price))
+  summarize(sample_mean = mean(price))
 
 sample_estimates_100 <- rep_sample_n(airbnb, size = 100, reps = 20000) |>
   group_by(replicate) |>
-  summarise(sample_mean = mean(price))
+  summarize(sample_mean = mean(price))
 
 sample_estimates_500 <- rep_sample_n(airbnb, size = 500, reps = 20000) |>
   group_by(replicate) |>
-  summarise(sample_mean = mean(price))
+  summarize(sample_mean = mean(price))
 
 ## Sampling distribution n = 20
 sampling_distribution_20 <- ggplot(sample_estimates_20, aes(x = sample_mean)) +
@@ -489,7 +495,7 @@ sampling_distribution_500 <- ggplot(sample_estimates_500, aes(x = sample_mean)) 
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 ```
 
-```{r 11-example-means7,  echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparison of sampling distributions", fig.retina = 2}
+```{r 11-example-means7,  echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparison of sampling distributions, with mean highlighted as a vertical red line", fig.retina = 2}
 annotated_sampling_dist_20 <- sampling_distribution_20 +
   geom_vline(xintercept = mean(sample_estimates$sample_mean), col = "red") +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20)) +
@@ -552,11 +558,10 @@ estimate of the population parameter.
 ---> 
 
 ### Summary
-1. A *point estimate* is a single value computed using a sample from a population (e.g. a mean or proportion)
-2. The *sampling distribution* of an estimate is the distribution of the estimate for all possible samples of a fixed size from the same population.
-3. The sample means and proportions calculated from samples are centred around the population mean and proportion, respectively.
+1. A point estimate is a single value computed using a sample from a population (e.g. a mean or proportion)
+2. The sampling distribution of an estimate is the distribution of the estimate for all possible samples of a fixed size from the same population.
+3. The shape of the sampling distribution is usually bell-shaped with one peak and centred at the population mean or proportion.
 4. The spread of the sampling distribution is related to the sample size. As the sample size increases, the spread of the sampling distribution decreases. 
-5. The shape of the sampling distribution is usually bell-shaped with one peak and centred at the population mean or proportion.
 
 ## Bootstrapping 
 ### Overview 
@@ -716,7 +721,7 @@ boot1_dist <- ggplot(boot1, aes(price)) +
 
 boot1_dist
 
-summarise(boot1, mean = mean(price))
+summarize(boot1, mean = mean(price))
 ```
 
 Notice in Figure \@ref(fig:11-bootstrapping3) that our bootstrap distribution
@@ -787,7 +792,7 @@ samples <- rep_sample_n(airbnb, size = 40, reps = 20000)
 
 sample_estimates <- samples |>
   group_by(replicate) |>
-  summarise(sample_mean = mean(price))
+  summarize(sample_mean = mean(price))
 
 sampling_dist <- ggplot(sample_estimates, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
