minor typo fix; added jupyter cite to refs.bib

--- a/jupyter.Rmd
+++ b/jupyter.Rmd
@@ -407,7 +407,7 @@ image_read("img/launcher-annotated.png") |>
 
 
 Once you have created a new Jupyter notebook, be sure to give it a descriptive 
-name, as the default file name is `Untitle.ipynb`. You can rename files by 
+name, as the default file name is `Untitled.ipynb`. You can rename files by 
 right-clicking on the file name of the Jupyter notebook you just created and 
 click **Rename**. This will make the file name editable. Use your keyboard to 
 change the name. Pressing `Enter` or clicking anywhere else in the Jupyter the 
