polish jupyter overview

--- a/jupyter.Rmd
+++ b/jupyter.Rmd
@@ -9,22 +9,26 @@ knitr::opts_chunk$set(message = FALSE)
 
 ## Overview
 
-To be able to effectively and efficiently write R code for your analysis you 
-will need access to the R programming language on a computer. This chapter will 
-show you how to use the R programming language with a common coding platform in 
-data science, Jupyter. In this chapter, we will show you how to use this 
-platform via a web-interface for ease of getting going quickly. In a later 
-chapter, we will also show you how to install and configure this on your local 
-computer (i.e., laptop). These skills are essential to getting your analysis 
-running; think of it like getting dressed in the morning!
+A typical data analysis involves not only writing and executing code, but also writing text and displaying images
+that help tell the story of the analysis. In fact, ideally, we would like to *interleave* these three media,
+with the text and images serving as narration for the code and its output.
+In this chapter we will show you how to accomplish this using Jupyter notebooks, a common coding platform in 
+data science. Jupyter notebooks do precisely what we need: they let you combine text, images, and (executable!) code in a single
+document. In this chapter, we will focus on the *use* of Jupyter notebooks to program in R and write
+text via a web-interface. 
+These skills are essential to getting your analysis running; think of it like getting dressed in the morning!
+Note that we assume that you already have Jupyter set up and ready to use. If that is not the case, please first read
+Chapter \@ref(move-to-your-own-machine) to learn how to install and configure Jupyter on your own
+computer. 
 
 ## Chapter learning objectives
 
 By the end of the chapter, readers will be able to:
 
-- use Jupyter to run, edit and write R code
-- open and view plain text data files in Jupyter
 - create new Jupyter notebooks
+- write, edit, and execute R code in a Jupyter notebook
+- write, edit, and view text in a Jupyter notebook
+- open and view plain text data files in Jupyter
 - export Jupyter notebooks to other standard file types (e.g., `.html`, `.pdf`)
 
 ## Jupyter
