polishing up to creating new code cells; uncommented kernel since it's important for students to know how to troubleshoot stuck kernels

--- a/jupyter.Rmd
+++ b/jupyter.Rmd
@@ -37,41 +37,36 @@ Jupyter is a web-based interactive development environment for creating, editing
 and executing documents called Jupyter notebooks. Jupyter notebooks are 
 documents that contain a mix of computer code (and its output) and formattable 
 text. Given that they combine these two analysis artifacts in a single 
-document—code is not separate from the output or written report—notebooks are 
+document&mdash;code is not separate from the output or written report&mdash;notebooks are 
 one of the leading tools to create reproducible data analyses. Reproducible data 
 analysis is one where you can reliably and easily recreate the same results when 
 analyzing the same data. Although this sounds like something that should always 
 be true of any data analysis, in reality, this is not often the case; one needs 
 to make a conscious effort to perform data analysis in a reproducible manner.
-
-The name Jupyter came from combining the names of the three programming 
-languages that it was initially targeted for (Julia, Python, and R), and now 
-many other languages can be used with Jupyter notebooks.
-
 An example of what a Jupyter notebook looks like is shown in 
 Figure \@ref(fig:img-jupyter).
 
-```{r jupyter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A screenshot of a Jupyter Notebook.", fig.retina = 2}
+```{r img-jupyter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A screenshot of a Jupyter Notebook.", fig.retina = 2}
 knitr::include_graphics("img/jupyter.png")
 ```
 
 ### Accessing Jupyter
 
-One of the easiest ways to start computing in R with Jupyter is to use a 
-web-based platform called JupyterHub that already has Jupyter, R, a number of R 
+One of the easiest ways to start working with Jupyter is to use a 
+web-based platform called JupyterHub. JupyterHubs often have Jupyter, R, a number of R 
 packages, and collaboration tools installed, configured and ready to use. 
-JupyterHub's are usually created and provisioned by organizations (for example,
-a university, a company, *etcetera*) and require authentication to gain 
-access. <!--- Insert link to public JupyterHub here if we can get 
+JupyterHubs are usually created and provisioned by organizations,
+and require authentication to gain access. For example, if you are reading
+this book as part of a course, your instructor may have a JupyterHub
+already set up for you to use! <!--- Insert link to public JupyterHub here if we can get 
 access/permission (either 2i2c collaboration, or 
 https://notebooks.gesis.org/hub/home) --> Jupyter can also be installed on your
-own computer (desktop or laptop), and we provide examples of how to do this in
-chapter \@ref(move-to-your-own-machine).
+own computer; see Chapter \@ref(move-to-your-own-machine) for instructions.
 
 ## Code cells
 
-The sections of a Jupyter notebook that contain code in the R programming 
-language are referred to as code cells. A code cell that has not yet been 
+The sections of a Jupyter notebook that contain code are referred to as code cells. 
+A code cell that has not yet been 
 executed has no number inside the square brackets to the left of the cell 
 (Figure \@ref(fig:code-cell-not-run)). Running a code cell will execute all of 
 the code it contains, and the output (if any exists) will be displayed directly
@@ -114,21 +109,22 @@ image_read("img/activate-and-run-button-annotated.png") |>
   image_crop("3632x900")
 ```
 
-To execute all of the code cells in an entire notebook, you can either select:
+To execute all of the code cells in an entire notebook, you have three options:
 
-1. **Run** >> **Run All Cells**
+1. Select **Run** >> **Run All Cells** from the menu.
 
-2. **Kernel** >> **Restart Kernel and Run All Cells...** from the Jupyter menu
+2. Select **Kernel** >> **Restart Kernel and Run All Cells...** from the menu.
 
-3. Click the **Restart the kernel, then re-run the whole notebook** button (▶▶) 
-in the Jupyter notebook tab menu. 
+3. Click the (▶▶) button in the tool bar.
 
-All of these commands result in all of the code cells in a notebook being run, 
-however only the **Restart Kernel and Run All Cells...** command and the ▶▶ 
-button will restart the R session before running all of the cells. Restarting 
-the R session before running all of the cells means that all previous objects 
+All of these commands result in all of the code cells in a notebook being run.
+However, there is a slight difference between them.
+In particular, only options 2 and 3 above will restart the R session before running all of the cells;
+option 1 will not restart the session. Restarting 
+the R session means that all previous objects 
 that were created from running cells before this command was run will be 
-deleted. This command emulates how your notebook code would run if you 
+deleted. In other words, restarting the session and then running all cells (options 2 or 3)
+emulates how your notebook code would run if you 
 completely restarted Jupyter before executing your entire notebook.
 
 ```{r restart-kernel-run-all, echo = FALSE, fig.cap = "Restarting the R session can be accomplished by clicking Restart Kernel and Run All Cells...", fig.retina = 2, out.width="100%"}
@@ -136,23 +132,23 @@ image_read("img/restart-kernel-run-all.png") |>
   image_crop("3632x900")
 ```
 
-> #### The Kernel
-> The kernel is a program that executes the code inside your notebook and 
-> outputs the results. Kernels for many different programming languages have 
-> been created for Jupyter, which means that Jupyter can interpret and execute 
-> the code of many different programming languages. To run R code, your notebook 
-> will need an R kernel. In the top right of your window, you can see a circle 
-> that indicates the status of your kernel. If the circle is empty (⚪), 
-> the kernel is idle and ready to execute code. If the circle is filled in (⚫), 
-> the kernel is busy running some code.
-> 
-> You may run into problems where your kernel is stuck for an excessive amount 
-> of time, your notebook is very slow and unresponsive, or your kernel loses its
-> connection. If this happens, try the following steps:
->
-> - At the top of your screen, click **Kernel**, then **Interrupt Kernel**.
-> - If that doesn't help, click **Kernel**, then **Restart Kernel**.... If you do this, you will have to run your code cells from the start of your notebook up until where you paused your work.
-> - If that doesn't help, restart your server. First, save your work by clicking **File** at the top left of your screen, then **Save Notebook**. Next, from the **File** menu click **Hub Control Panel**. Choose **Stop My Server** to shut it down, then the **My Server** button to start it back up. Then, navigate back to the notebook you were working on.
+### The Kernel
+The kernel is a program that executes the code inside your notebook and 
+outputs the results. Kernels for many different programming languages have 
+been created for Jupyter, which means that Jupyter can interpret and execute 
+the code of many different programming languages. To run R code, your notebook 
+will need an R kernel. In the top right of your window, you can see a circle 
+that indicates the status of your kernel. If the circle is empty (⚪), 
+the kernel is idle and ready to execute code. If the circle is filled in (⚫), 
+the kernel is busy running some code.
+
+You may run into problems where your kernel is stuck for an excessive amount 
+of time, your notebook is very slow and unresponsive, or your kernel loses its
+connection. If this happens, try the following steps:
+
+1. At the top of your screen, click **Kernel**, then **Interrupt Kernel**.
+2. If that doesn't help, click **Kernel**, then **Restart Kernel**.... If you do this, you will have to run your code cells from the start of your notebook up until where you paused your work.
+3. If that doesn't help, restart your server. First, save your work by clicking **File** at the top left of your screen, then **Save Notebook**. Next, from the **File** menu click **Hub Control Panel**. Choose **Stop My Server** to shut it down, then the **My Server** button to start it back up. Then, navigate back to the notebook you were working on.
 
 ### Creating new code cells
 
